--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,19 @@
 <resources>
     <string name="app_name">Shoppy</string>
-    <string name="cancel">Cancel</string>
-    <string name="username">Username:</string>
+    <string name="app_name2">SHOPPY</string>
+
+    <string name="username">User Name</string>
+    <string name="password">Password</string>
+    <string name="confirm_password">Confirm Password</string>
+
     <string name="email">Email:</string>
-    <string name="password">Password:</string>
-    <string name="confirm_password">Confirm Password:</string>
+    <string name="cancel">Cancel</string>
+
+    <string name="signin">Sign In</string>
+    <string name="signup">Sign Up</string>
+
+    <string name="login">Login</string>
     <string name="register">Register</string>
+
 
 </resources>
