Store Name Features added
- App Icon Created :)
- Splash Screen Updated
- Prompt Dialog for Store Name input

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,10 @@
 
     <string name="login">Login</string>
     <string name="register">Register</string>
+    <string name="powered_by">powered by</string>
+    <string name="android_studio">Android Studio</string>
+    <string name="okay">Okay</string>
+    <string name="message1">Store Name must be provide!</string>
+    <string name="finish">Finish</string>
+    <string name="store_name">Store Name</string>
 </resources>
