--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Shoppy</string>
-    <string name="app_name2">SHOPPY</string>
+    <string name="app_name">Shopyy</string>
+    <string name="app_name2">SHOPYY</string>
 
     <string name="username">User Name</string>
     <string name="password">Password</string>
@@ -17,7 +17,6 @@
     <string name="powered_by">powered by</string>
     <string name="android_studio">Android Studio</string>
     <string name="okay">Okay</string>
-    <string name="message1">Store Name must be provide!</string>
     <string name="finish">Finish</string>
     <string name="store_name">Store Name</string>
 </resources>
