--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,12 @@
     <string name="okay">Okay</string>
     <string name="finish">Finish</string>
     <string name="store_name">Store Name</string>
+
+    //-----------Navigation drawer-----------
+    <string name="navigation">Navigation Drawer</string>
+
+
+    <string name="nav_open">Open</string>
+    <string name="nav_close">Close</string>
+
 </resources>
