--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,5 @@
     <string name="okay">Okay</string>
     <string name="finish">Finish</string>
     <string name="store_name">Store Name</string>
+    <string name="web_browser">Web Browser</string>
 </resources>
