Shopyy is now Version 1.2 Beta
- Prompt when discarding changes added
- Image from Camera now has Crop Features. But image taken is save locally.
- Fixed some bugs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,5 +71,5 @@
     <string name="developer_contact">Developer Contact</string>
     <string name="about_the_app">Shopyy is an offline app that are designed to managed stocks and items. It is developed to manage goods in a small shop or home inventory storage. Shopyy helps to keep track of your stock of any kind of items.</string>
     <string name="about">About the app</string>
-    <string name="version_1_0">Version 1.0</string>
+    <string name="app_version">Version 1.1.2</string>
 </resources>
