--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,7 @@
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="add_item">Add Item</string>
+    <string name="menu_history">History</string>
 
     <string name="linklabel">Shopyy Source Code is Open Source</string>
     <string name="hyper">Repository: <a href="https://github.com/SinOfGuardian/Shopyy.git">Github</a> </string>
@@ -72,4 +73,13 @@
     <string name="about_the_app">Shopyy is an offline app that are designed to managed stocks and items. It is developed to manage goods in a small shop or home inventory storage. Shopyy helps to keep track of your stock of any kind of items.</string>
     <string name="about">About the app</string>
     <string name="app_version">Version 1.1.2</string>
+
+    <string name="baron">Baron M. Muyano</string>
+    <string name="baron_email">exilemuyano@gmail.com</string>
+    <string name="carlo">John Carlo Rivera</string>
+    <string name="carlo_email">jidirivera022118@gmail.com</string>
+    <string name="lariosa">John Dominick Lariosa</string>
+    <string name="lariosa_email">lariosa.johndominick@gmail.com</string>
+
+
 </resources>
